added header and date in html and Javascipt

--- a/index.html
+++ b/index.html
@@ -11,6 +11,28 @@
     <title>Weather Forecast</title>
 </head>
 <body>
+    <header>
+        <div class="container">
+            <h1>Weather Dashboard</h1>
+            <h2 id="momentDate"></h2>
+        </div>
+    </header>
+
+    <main>
+
     
+
+
+
+
+
+
+    </main>
+
+    <footer>
+
+    </footer>
+
+    <script src="./assets/script.js"></script>
 </body>
 </html>
