added variables to fetch in JavaScript_fixed ID's in HTML

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           type="text"
           class=""
           id="citySearch"
-          placeholder="enter a city!"
+          placeholder="Enter a city!"
         />
         <div>
           <button type="button" class="" id="searchBtn">
@@ -39,10 +39,10 @@
       <section id="WeatherData">
         <div id="currentForecast">
           <div id="currentData">
-            <h3 class="" id="current-city"></h3>
-            <p>Temperature:<span id="temperature"></span>*F</p>
-            <p>Wind Speed:<span id="windSpeed"></span>MPH</p>
-            <p>Humidity:<span id="humidity"></span>%</p>
+            <h3 class="" id="currentCity"></h3>
+            <p>Temperature:<span id="currentTemperature"></span>*F</p>
+            <p>Wind Speed:<span id="currentWindSpeed"></span>MPH</p>
+            <p>Humidity:<span id="currentHumidity"></span>%</p>
           </div>
         </div>
 
