--- a/index.html
+++ b/index.html
@@ -51,33 +51,33 @@
           <h2>5-Day Forecast:</h2>
 
           <div class="weatherBox" id="box0">
-            <h3>Temp:</h3>
-            <h3>Wind:</h3>
-            <h3>Humidity:</h3>
+            <h3 id="temp0">Temp:</h3>
+            <h3 id="wind0">Wind:</h3>
+            <h3 id="hum0">Humidity:</h3>
           </div>
 
           <div class="weatherBox" id="box1">
-            <h3>Temp:</h3>
-            <h3>Wind:</h3>
-            <h3>Humidity:</h3>
+            <h3 id="temp1">Temp:</h3>
+            <h3 id="wind1">Wind:</h3>
+            <h3 id="hum1">Humidity:</h3>
           </div>
 
           <div class="weatherBox" id="box2">
-            <h3>Temp:</h3>
-            <h3>Wind:</h3>
-            <h3>Humidity:</h3>
+            <h3 id="temp2">Temp:</h3>
+            <h3 id="wind2">Wind:</h3>
+            <h3 id="hum2">Humidity:</h3>
           </div>
 
           <div class="weatherBox" id="box3">
-            <h3>Temp:</h3>
-            <h3>Wind:</h3>
-            <h3>Humidity:</h3>
+            <h3 id="temp3">Temp:</h3>
+            <h3 id="wind3">Wind:</h3>
+            <h3 id="hum3">Humidity:</h3>
           </div>
 
           <div class="weatherBox" id="box4">
-            <h3>Temp:</h3>
-            <h3>Wind:</h3>
-            <h3>Humidity:</h3>
+            <h3 id="temp4">Temp:</h3>
+            <h3 id="wind4">Wind:</h3>
+            <h3 id="hum4">Humidity:</h3>
           </div>
         </div>
       </section>
