Finally got data fectched back to daisplaygit add -A! its not the right data, but still  a big win

--- a/index.html
+++ b/index.html
@@ -51,12 +51,14 @@
           <h2>5-Day Forecast:</h2>
 
           <div class="weatherBox" id="box0">
+            <h2><span id="boxDate0"></span></h2>
             <h3 id="temp0">Temp:</h3>
             <h3 id="wind0">Wind:</h3>
             <h3 id="hum0">Humidity:</h3>
           </div>
 
           <div class="weatherBox" id="box1">
+            <h2><span id="boxDate1"></span></h2>
             <h3 id="temp1">Temp:</h3>
             <h3 id="wind1">Wind:</h3>
             <h3 id="hum1">Humidity:</h3>
