fiveday forecast fetchs all data_added ID's to HTML

--- a/index.html
+++ b/index.html
@@ -65,18 +65,21 @@
           </div>
 
           <div class="weatherBox" id="box2">
+            <h2><span id="boxDate2"></span></h2>
             <h3 id="temp2">Temp:</h3>
             <h3 id="wind2">Wind:</h3>
             <h3 id="hum2">Humidity:</h3>
           </div>
 
           <div class="weatherBox" id="box3">
+            <h2><span id="boxDate3"></span></h2>
             <h3 id="temp3">Temp:</h3>
             <h3 id="wind3">Wind:</h3>
             <h3 id="hum3">Humidity:</h3>
           </div>
 
           <div class="weatherBox" id="box4">
+            <h2><span id="boxDate4"></span></h2>
             <h3 id="temp4">Temp:</h3>
             <h3 id="wind4">Wind:</h3>
             <h3 id="hum4">Humidity:</h3>
