itmes now show up from local storage on page_fixed forecast card text issue_search button now works and puts content in local storage

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 
       <!--This is be current weather box-->
       <section id="WeatherData">
+
         <div id="currentForecast">
           <div id="currentData">
             <h3 class="" id="currentCity"></h3>
@@ -45,6 +46,13 @@
             <p>Wind Speed:<span id="currentWindSpeed"></span>MPH</p>
             <p>Humidity:<span id="currentHumidity"></span>%</p>
           </div>
+        </div>
+
+
+        <div id="searchHistory">
+          
+
+
         </div>
 
         <!--Weather boxs/cards that will show the 5 day forecast-->
